--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ a:hover {
 
 body {
   margin: 0;
+  height: 100vh;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -68,8 +69,9 @@ code {
 
 #app {
   width: 100%;
+  height: 100%;
+  overflow: hidden;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
