--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,10 @@ body {
   text-align: center;
 }
 
+* {
+  user-select: none
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
